@@ -29,7 +29,7 @@ public interface ExperimentAdapter {
  * @Author: ChZheng
  * @Date: 2025-04-14 14:06:11
  * @LastEditors: ChZheng
- * @LastEditTime: 2025-04-15 15:54:37
+ * @LastEditTime: 2025-04-16 10:18:29
  * @FilePath: src/main/java/com/example/abtest/adapter/V1Adapter.java
  * @Description:
  */
@@ -38,8 +38,8 @@ package com.example.abtest.adapter;
 import com.example.abtest.adapter.ExperimentAdapter;
 import org.springframework.stereotype.Component;
 
-import java.util.Collections;
-import java.util.Map;
+import java.text.SimpleDateFormat;
+import java.util.*;
 
 
 @Component
@@ -63,8 +63,72 @@ public class V1Adapter implements ExperimentAdapter {
     }
 
     @Override
+    @Override
     public Map<String, Object> convertGetDetailsResponse(Map<String, Object> response) {
-        return Collections.emptyMap();
+        if (!"200".equals(String.valueOf(response.get("code")))) {
+            return response;
+        }
+
+        Map<String, Object> data = (Map<String, Object>) response.get("data");
+        Map<String, Object> converted = new LinkedHashMap<>();
+
+        // 时间格式转换
+        SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
+        converted.put("start_ts", sdf.format(new Date((Long)data.get("start_time") * 1000)));
+        converted.put("end_ts", sdf.format(new Date((Long)data.get("end_time") * 1000)));
+
+        // 层级信息转换
+        Map<String, Object> layerInfo = (Map<String, Object>) data.get("layer_info");
+        Map<String, Object> layer = new HashMap<>();
+        layer.put("name", layerInfo.get("layer_name"));
+        layer.put("status", layerInfo.get("layer_status"));
+        layer.put("type", layerInfo.get("type"));
+
+        // 版本信息转换
+        List<Map<String, Object>> versions = new ArrayList<>();
+        for (Map<String, Object> v : (List<Map<String, Object>>) data.get("versions")) {
+            Map<String, Object> version = new HashMap<>();
+            version.put("id", v.get("id"));
+            version.put("name", v.get("name"));
+            version.put("type", v.get("type"));
+            version.put("config", v.get("config"));
+            version.put("description", v.get("description"));
+            version.put("weight", v.get("weight"));
+            versions.add(version);
+        }
+
+        // 指标信息转换
+        List<Map<String, Object>> metrics = new ArrayList<>();
+        for (Map<String, Object> m : (List<Map<String, Object>>) data.get("metrics")) {
+            Map<String, Object> metric = new HashMap<>();
+            Map<String, Object> metricData = ((List<Map<String, Object>>) m.get("metrics")).get(0);
+            metric.put("id", metricData.get("id"));
+            metric.put("name", metricData.get("name"));
+            metric.put("metric_description", metricData.get("description"));
+            metric.put("type", metricData.get("type"));
+            metrics.add(metric);
+        }
+
+        // 构建最终响应
+        Map<String, Object> result = new HashMap<>();
+        result.put("code", 200);
+        result.put("message", "success");
+        result.put("data", Map.of(
+                "id", data.get("id"),
+                "name", data.get("flight_name"),
+                "owner", data.get("owner"),
+                "description", data.get("description"),
+                "status", data.get("status"),
+                "type", "client",
+                "mode", data.get("mode"),
+                "layer", layer,
+                "version_resource", data.get("version_resource"),
+                "versions", versions,
+                "metrics", metrics,
+                "whitelist", Collections.emptyList()
+        ));
+
+        return result;
     }
 
     @Override
@@ -74,7 +138,8 @@ public class V1Adapter implements ExperimentAdapter {
 
     @Override
     public Map<String, Object> convertGenerateReportResponse(Map<String, Object> response) {
-        return Collections.emptyMap();
+        // 保持Python结构直接返回
+        return response;
     }
 
     @Override
@@ -84,7 +149,11 @@ public class V1Adapter implements ExperimentAdapter {
 
     @Override
     public Map<String, Object> convertModifyStatusResponse(Map<String, Object> response) {
-        return Collections.emptyMap();
+        return Map.of(
+                "code", response.get("code"),
+                "message", response.get("message"),
+                "data", Map.of("status", response.get("status"))
+        );
     }
 
     @Override
@@ -94,7 +163,19 @@ public class V1Adapter implements ExperimentAdapter {
 
     @Override
     public Map<String, Object> convertListMetricsResponse(Map<String, Object> response) {
-        return Collections.emptyMap();
+        List<Map<String, Object>> converted = new ArrayList<>();
+        for (Map<String, Object> item : (List<Map<String, Object>>) response.get("data")) {
+            Map<String, Object> metric = new HashMap<>();
+            metric.put("id", item.get("id"));
+            metric.put("name", item.get("name"));
+            metric.put("description", item.get("description"));
+            converted.add(metric);
+        }
+        return Map.of(
+                "code", 200,
+                "data", converted,
+                "message", "success"
+        );
     }
 
     @Override
@@ -106,14 +187,30 @@ public class V1Adapter implements ExperimentAdapter {
     public Map<String, Object> convertListGroupsResponse(Map<String, Object> response) {
         return Collections.emptyMap();
     }
+    @Override
+    public Map<String, Object> convertModifyStatusRequest(Map<String, Object> params) {
+        return Map.of(
+                "flight_id", params.get("experiment_id"),
+                "action", params.get("action")
+        );
+    }
 
+    @Override
+    public Map<String, Object> convertModifyStatusResponse(Map<String, Object> response) {
+        // 保持Python的响应结构
+        return Map.of(
+                "code", response.get("code"),
+                "message", response.get("message"),
+                "data", Map.of("status", ((Map)response.get("data")).get("status"))
+        );
+    }
     // 其他转换方法实现...
 }
 /**
  * @Author: ChZheng
  * @Date: 2025-04-15 14:07:08
  * @LastEditors: ChZheng
- * @LastEditTime: 2025-04-15 15:45:59
+ * @LastEditTime: 2025-04-16 09:23:05
  * @FilePath: src/main/java/com/example/abtest/adapter/V2Adapter.java
  * @Description:
  */
@@ -122,6 +219,7 @@ package com.example.abtest.adapter;
 import org.springframework.stereotype.Component;
 
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
 
 @Component
@@ -190,7 +288,28 @@ public class V2Adapter implements ExperimentAdapter {
     public Map<String, Object> convertListGroupsResponse(Map<String, Object> response) {
         return Collections.emptyMap();
     }
+    @Override
+    public Map<String, Object> convertCreateExperimentRequest(Map<String, Object> params) {
+        // V2参数透传
+        return new HashMap<>(params);
+    }
+
+    @Override
+    public Map<String, Object> convertGetDetailsResponse(Map<String, Object> response) {
+        // V2直接返回原始响应
+        return response;
+    }
+
+    // 其他方法保持透传逻辑
+    @Override
+    public Map<String, Object> convertGenerateReportRequest(Map<String, Object> params) {
+        return new HashMap<>(params);
+    }
+
+
+
 }
+
 package com.example.abtest.auth; /**
  * @Author: ChZheng
  * @Date: 2025-04-15 14:52:28
@@ -397,50 +516,68 @@ public class V2Auth {
         }
     }
 }
-
 /**
  * @Author: ChZheng
  * @Date: 2025-04-15 14:08:12
  * @LastEditors: ChZheng
- * @LastEditTime: 2025-04-15 15:25:50
+ * @LastEditTime: 2025-04-16 09:21:23
  * @FilePath: src/main/java/com/example/abtest/client/ExperimentClient.java
  * @Description:
  */
 package com.example.abtest.client;
 
+import java.util.Map;
+
+// ExperimentClient.java
 public interface ExperimentClient {
+    Map<String, Object> createExperiment(Map<String, Object> params);
+    Map<String, Object> getDetails(Map<String, Object> params);
+    Map<String, Object> generateReport(Map<String, Object> params);
+    Map<String, Object> modifyStatus(Map<String, Object> params);
+    Map<String, Object> listMetrics(Map<String, Object> params);
+    Map<String, Object> listGroups(Map<String, Object> params);
+
+    default Map<String, Object> notImplemented() {
+        throw new UnsupportedOperationException("方法未实现");
+    }
 }
+
 /**
  * @Author: ChZheng
  * @Date: 2025-04-14 14:06:11
  * @LastEditors: ChZheng
- * @LastEditTime: 2025-04-15 15:25:50
+ * @LastEditTime: 2025-04-16 09:59:43
  * @FilePath: src/main/java/com/example/abtest/client/V1Client.java
  * @Description:
  */
 // src/main/java/com/example/abtest/service/client/V1Client.java
 package com.example.abtest.client;
 
+import com.example.abtest.adapter.ExperimentAdapter;
 import com.example.abtest.auth.V1Auth;
+import com.example.abtest.model.ResponseResult;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.*;
 import org.springframework.stereotype.Component;
+import org.springframework.util.LinkedMultiValueMap;
+import org.springframework.util.MultiValueMap;
 import org.springframework.web.client.RestTemplate;
 
+import java.util.Arrays;
 import java.util.Map;
 
 @Component
-public class V1Client implements Client {
-
+public class V1Client implements ExperimentClient {
     private final RestTemplate restTemplate;
     private final V1Auth authProvider;
     private final String baseUrl;
 
     public V1Client(RestTemplate restTemplate,
                     V1Auth authProvider,
-                    AppProperties appProperties) {
+                    @Value("${abtest.v1.base-url}") String baseUrl) {  // 使用直接注入
         this.restTemplate = restTemplate;
         this.authProvider = authProvider;
-        this.baseUrl = appProperties.getV1BaseUrl();
+        this.baseUrl = baseUrl;
     }
 
     @Override
@@ -459,20 +596,134 @@ public class V1Client implements Client {
                 params.get("is_duplicate")
         ).getBody();
     }
+    @Override
+    private void validateVersion(String version) {
+        if (!adapters.containsKey(version) || !clients.containsKey(version)) {
+            throw new IllegalArgumentException("Unsupported version: " + version);
+        }
+    }
+
+    public ResponseResult getExperimentDetails(Map<String, Object> params) {
+        try {
+            String version = ((String) params.get("version")).toLowerCase();
+            validateVersion(version);
+
+            ExperimentAdapter adapter = adapters.get(version);
+            ExperimentClient client = clients.get(version);
+
+            Map<String, Object> convertedParams = adapter.convertGetDetailsRequest(params);
+            Map<String, Object> response = client.getDetails(convertedParams);
+            return ResponseResult.success(adapter.convertGetDetailsResponse(response));
+        } catch (IllegalArgumentException e) {
+            return ResponseResult.error(400, e.getMessage());
+        } catch (Exception e) {
+            return ResponseResult.error(500, "服务处理异常");
+        }
+    }
+
+
+    @Override
+    @Override
+    public Map<String, Object> modifyStatus(Map<String, Object> params) {
+        String action = (String) params.get("action");
+        if (!Arrays.asList("launch", "stop").contains(action)) {
+            return Map.of("code", 400, "message", "无效操作类型");
+        }
+
+        try {
+            String url = String.format("%s/datatester/api/v2/flight/%s", baseUrl, action);
+            Map<String, Object> payload = Map.of("flight_id", params.get("flight_id"));
+
+            HttpEntity<Map<String, Object>> request = new HttpEntity<>(payload, authProvider.getHeaders());
+            ResponseEntity<Map> response = restTemplate.exchange(
+                    url,
+                    HttpMethod.PUT,
+                    request,
+                    Map.class
+            );
+
+            return response.getBody();
+        } catch (Exception e) {
+            log.error("修改状态失败: {}", e.getMessage());
+            return Map.of("code", 500, "message", "状态修改失败");
+        }
+    }
+    @Override
+    public Map<String, Object> listMetrics(Map<String, Object> params) {
+        try {
+            String url = String.format("%s/datatester/api/v2/app/%s/metric/list",
+                    baseUrl, params.get("app_id"));
+
+            MultiValueMap<String, String> queryParams = new LinkedMultiValueMap<>();
+            queryParams.add("keyword", (String) params.get("keyword"));
+            queryParams.add("status", String.valueOf(params.get("status")));
+            queryParams.add("is_required", String.valueOf(params.get("is_required")));
+            queryParams.add("need_page", String.valueOf(params.get("need_page")));
+            queryParams.add("page_size", String.valueOf(params.get("page_size")));
+
+            HttpEntity<?> request = new HttpEntity<>(authProvider.getHeaders());
+            ResponseEntity<Map> response = restTemplate.exchange(
+                    url,
+                    HttpMethod.GET,
+                    request,
+                    Map.class,
+                    queryParams
+            );
+
+            return response.getBody();
+        } catch (Exception e) {
+            log.error("获取指标列表失败: {}", e.getMessage());
+            return Map.of("code", 500, "message", "指标获取失败");
+        }
+    }
+    @Override
+    public Map<String, Object> listGroups(Map<String, Object> params) {
+        try {
+            String url = String.format("%s/datatester/api/v2/app/%s/layer/list",
+                    baseUrl, params.get("app_id"));
+
+            MultiValueMap<String, String> queryParams = new LinkedMultiValueMap<>();
+            queryParams.add("keyword", (String) params.get("keyword"));
+            queryParams.add("status", String.valueOf(params.get("status")));
+            queryParams.add("need_page", String.valueOf(params.get("need_page")));
+            queryParams.add("page_size", String.valueOf(params.get("page_size")));
+            queryParams.add("page", String.valueOf(params.get("page")));
+            queryParams.add("need_default", String.valueOf(params.get("need_default")));
+
+            HttpEntity<?> request = new HttpEntity<>(authProvider.getHeaders());
+            ResponseEntity<Map> response = restTemplate.exchange(
+                    url,
+                    HttpMethod.GET,
+                    request,
+                    Map.class,
+                    queryParams
+            );
+
+            return response.getBody();
+        } catch (Exception e) {
+            log.error("获取互斥组失败: {}", e.getMessage());
+            return Map.of("code", 500, "message", "互斥组获取失败");
+        }
+    }
+
+
 }
 /**
  * @Author: ChZheng
  * @Date: 2025-04-15 14:08:22
  * @LastEditors: ChZheng
- * @LastEditTime: 2025-04-15 15:41:43
+ * @LastEditTime: 2025-04-16 10:18:46
  * @FilePath: src/main/java/com/example/abtest/client/V2Client.java
  * @Description:
  */
 package com.example.abtest.client;
 
+import com.example.abtest.auth.V2Auth;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpMethod;
 import org.springframework.stereotype.Component;
+import org.springframework.util.LinkedMultiValueMap;
+import org.springframework.util.MultiValueMap;
 import org.springframework.web.client.RestTemplate;
 
 import java.util.Map;
@@ -506,12 +757,61 @@ public class V2Client implements ExperimentClient {
                 params.get("experiment_id")
         ).getBody();
     }
+
+    @Override
+    public Map<String, Object> createExperiment(Map<String, Object> params) {
+        String url = String.format("%s/openapi/v2/apps/%s/experiments",
+                baseUrl, params.get("app_id"));
+
+        HttpEntity<Map<String, Object>> request = new HttpEntity<>(params, authProvider.getHeaders());
+        return restTemplate.postForObject(url, request, Map.class);
+    }
+
+    @Override
+    public Map<String, Object> listGroups(Map<String, Object> params) {
+        String url = String.format("%s/openapi/v2/apps/%s/layers",
+                baseUrl, params.get("app_id"));
+
+        MultiValueMap<String, String> queryParams = new LinkedMultiValueMap<>();
+        queryParams.add("page", String.valueOf(params.get("page")));
+        queryParams.add("page_size", String.valueOf(params.get("page_size")));
+
+        HttpEntity<?> request = new HttpEntity<>(authProvider.getHeaders());
+        return restTemplate.exchange(
+                url,
+                HttpMethod.GET,
+                request,
+                Map.class,
+                queryParams
+        ).getBody();
+    }
+    @Override
+    public Map<String, Object> generateReport(Map<String, Object> params) {
+        String url = String.format("%s/openapi/v2/apps/%s/experiments/%s/metrics",
+                baseUrl, params.get("app_id"), params.get("experiment_id"));
+
+        MultiValueMap<String, String> queryParams = new LinkedMultiValueMap<>();
+        queryParams.add("report_type", (String) params.get("report_type"));
+        queryParams.add("start_ts", (String) params.get("start_ts"));
+        queryParams.add("end_ts", (String) params.get("end_ts"));
+        queryParams.add("filters", (String) params.get("filters"));
+
+        HttpEntity<?> request = new HttpEntity<>(authProvider.getHeaders());
+        return restTemplate.exchange(
+                url,
+                HttpMethod.GET,
+                request,
+                Map.class,
+                queryParams
+        ).getBody();
+    }
+
 }
 /**
  * @Author: ChZheng
  * @Date: 2025-04-15 11:01:48
  * @LastEditors: ChZheng
- * @LastEditTime: 2025-04-15 15:25:50
+ * @LastEditTime: 2025-04-15 16:19:26
  * @FilePath: src/main/java/com/example/abtest/config/ABTestConfig.java
  * @Description:
  */
@@ -526,7 +826,13 @@ import org.springframework.validation.annotation.Validated;
 @Configuration
 @ConfigurationProperties(prefix = "abtest")
 @Validated
+@Data
 public class ABTestConfig {
+    private String env;
+
+    public boolean isProduction() {
+        return "prod".equals(env);
+    }
     @NestedConfigurationProperty
     private V1Config v1;
 
@@ -579,7 +885,7 @@ public class RestTemplateConfig {
  * @Author: ChZheng
  * @Date: 2025-04-14 14:06:11
  * @LastEditors: ChZheng
- * @LastEditTime: 2025-04-15 15:42:55
+ * @LastEditTime: 2025-04-16 10:12:39
  * @FilePath: src/main/java/com/example/abtest/controller/ABTestController.java
  * @Description:
  */
@@ -604,18 +910,80 @@ public class ABTestController {
         this.abTestService = abTestService;
     }
 
-    @GetMapping("/v{version}/apps/{appId}/experiment/{experimentId}/details")
-    public ResponseResult getExperimentDetails(
+    @PostMapping("/{version}/apps/{appId}/experiments")
+    public ResponseResult createExperiment(
             @PathVariable String version,
             @PathVariable Long appId,
-            @PathVariable Long experimentId) {
+            @RequestBody Map<String, Object> body) {
+
+        Map<String, Object> params = new HashMap<>();
+        params.put("version", version);
+        params.put("app_id", appId);
+        params.putAll(body);
+
+        return abTestService.createExperiment(params);
+    }
+
+    @GetMapping("/{version}/apps/{appId}/experiment/{experimentId}/metrics")
+    public ResponseResult generateReport(
+            @PathVariable String version,
+            @PathVariable Long appId,
+            @PathVariable Long experimentId,
+            @RequestParam String reportType,
+            @RequestParam String startTs,
+            @RequestParam String endTs,
+            @RequestParam(required = false) String filters) {
 
         Map<String, Object> params = new HashMap<>();
         params.put("version", version);
         params.put("app_id", appId);
         params.put("experiment_id", experimentId);
+        params.put("report_type", reportType);
+        params.put("start_ts", startTs);
+        params.put("end_ts", endTs);
+        params.put("filters", filters);
 
-        return abTestService.getExperimentDetails(params);
+        return abTestService.generateReport(params);
+    }
+
+    @GetMapping("/{version}/apps/{appId}/metrics")
+    public ResponseResult listMetrics(
+            @PathVariable String version,
+            @PathVariable Long appId,
+            @RequestParam(required = false) String keyword,
+            @RequestParam(defaultValue = "1") int page,
+            @RequestParam(defaultValue = "10") int pageSize,
+            @RequestParam(defaultValue = "1") int needPage) {
+
+        Map<String, Object> params = new HashMap<>();
+        params.put("version", version);
+        params.put("app_id", appId);
+        params.put("keyword", keyword);
+        params.put("page", page);
+        params.put("page_size", pageSize);
+        params.put("need_page", needPage);
+
+        return abTestService.listAvailableMetrics(params);
+    }
+
+    @GetMapping("/{version}/apps/{appId}/layers")
+    public ResponseResult listMutexGroups(
+            @PathVariable String version,
+            @PathVariable Long appId,
+            @RequestParam(required = false) String keyword,
+            @RequestParam(defaultValue = "1") int page,
+            @RequestParam(defaultValue = "10") int pageSize,
+            @RequestParam(defaultValue = "1") int needPage) {
+
+        Map<String, Object> params = new HashMap<>();
+        params.put("version", version);
+        params.put("app_id", appId);
+        params.put("keyword", keyword);
+        params.put("page", page);
+        params.put("page_size", pageSize);
+        params.put("need_page", needPage);
+
+        return abTestService.listMutexGroups(params);
     }
 }
 /**
@@ -701,7 +1069,7 @@ public class ResponseResult {
  * @Author: ChZheng
  * @Date: 2025-04-14 14:06:11
  * @LastEditors: ChZheng
- * @LastEditTime: 2025-04-15 15:42:27
+ * @LastEditTime: 2025-04-16 10:14:55
  * @FilePath: src/main/java/com/example/abtest/service/ABTestService.java
  * @Description:
  */
@@ -713,6 +1081,7 @@ import com.example.abtest.model.ResponseResult;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.util.Arrays;
 import java.util.Map;
 
 // ABTestService.java
@@ -728,12 +1097,44 @@ public class ABTestService {
         this.clients = clients;
     }
 
+    private void validateVersion(String version) {
+        if (!adapters.containsKey(version) || !clients.containsKey(version)) {
+            throw new IllegalArgumentException("Unsupported version: " + version);
+        }
+    }
+    public ResponseResult createExperiment(Map<String, Object> params) {
+        try {
+            String version = ((String) params.get("version")).toLowerCase();
+            ExperimentAdapter adapter = adapters.get(version);
+            ExperimentClient client = clients.get(version);
+
+            Map<String, Object> convertedParams = adapter.convertCreateExperimentRequest(params);
+            Map<String, Object> response = client.createExperiment(convertedParams);
+            return ResponseResult.success(adapter.convertCreateExperimentResponse(response));
+        } catch (Exception e) {
+            return ResponseResult.error(500, "实验创建失败");
+        }
+    }
+
+    public ResponseResult listMutexGroups(Map<String, Object> params) {
+        try {
+            String version = ((String) params.get("version")).toLowerCase();
+            ExperimentAdapter adapter = adapters.get(version);
+            ExperimentClient client = clients.get(version);
+
+            Map<String, Object> convertedParams = adapter.convertListGroupsRequest(params);
+            Map<String, Object> response = client.listGroups(convertedParams);
+            return ResponseResult.success(adapter.convertListGroupsResponse(response));
+        } catch (Exception e) {
+            return ResponseResult.error(500, "互斥组查询失败");
+        }
+    }
+
+
     public ResponseResult getExperimentDetails(Map<String, Object> params) {
         try {
-            String version = ((String) params.get("version")).toUpperCase();
-            if (!adapters.containsKey(version) || !clients.containsKey(version)) {
-                return ResponseResult.error(400, "不支持的版本类型");
-            }
+            String version = ((String) params.get("version")).toLowerCase();
+            validateVersion(version);
 
             ExperimentAdapter adapter = adapters.get(version);
             ExperimentClient client = clients.get(version);
@@ -741,8 +1142,59 @@ public class ABTestService {
             Map<String, Object> convertedParams = adapter.convertGetDetailsRequest(params);
             Map<String, Object> response = client.getDetails(convertedParams);
             return ResponseResult.success(adapter.convertGetDetailsResponse(response));
+        } catch (IllegalArgumentException e) {
+            return ResponseResult.error(400, e.getMessage());
         } catch (Exception e) {
             return ResponseResult.error(500, "服务处理异常");
+        }
+    }
+
+    public ResponseResult generateReport(Map<String, Object> params) {
+        try {
+            String version = ((String) params.get("version")).toLowerCase();
+            ExperimentAdapter adapter = adapters.get(version);
+            ExperimentClient client = clients.get(version);
+
+            Map<String, Object> convertedParams = adapter.convertGenerateReportRequest(params);
+            Map<String, Object> response = client.generateReport(convertedParams);
+            return ResponseResult.success(adapter.convertGenerateReportResponse(response));
+        } catch (Exception e) {
+            return ResponseResult.error(500, "报告生成失败");
+        }
+    }
+
+    public ResponseResult listMetrics(Map<String, Object> params) {
+        try {
+            String version = ((String) params.get("version")).toLowerCase();
+            ExperimentAdapter adapter = adapters.get(version);
+            ExperimentClient client = clients.get(version);
+
+            Map<String, Object> convertedParams = adapter.convertListMetricsRequest(params);
+            Map<String, Object> response = client.listMetrics(convertedParams);
+            return ResponseResult.success(adapter.convertListMetricsResponse(response));
+        } catch (Exception e) {
+            return ResponseResult.error(500, "指标查询失败");
+        }
+    }
+
+
+    public ResponseResult modifyExperimentStatus(Map<String, Object> params) {
+        try {
+            String version = ((String) params.get("version")).toLowerCase();
+            String action = (String) params.get("action");
+
+            if (!Arrays.asList("launch", "stop").contains(action)) {
+                return ResponseResult.error(400, "无效操作类型");
+            }
+
+            ExperimentAdapter adapter = adapters.get(version);
+            ExperimentClient client = clients.get(version);
+
+            Map<String, Object> convertedParams = adapter.convertModifyStatusRequest(params);
+            Map<String, Object> response = client.modifyStatus(convertedParams);
+            return ResponseResult.success(adapter.convertModifyStatusResponse(response));
+        } catch (Exception e) {
+            return ResponseResult.error(500, "状态修改失败");
         }
     }
 }
@@ -770,7 +1222,7 @@ public class AbtestApplication {
  # @Author: ChZheng
  # @Date: 2025-04-14 14:06:11
  # @LastEditors: ChZheng
- # @LastEditTime: 2025-04-15 15:49:50
+ # @LastEditTime: 2025-04-16 09:23:28
  # @FilePath: src/main/resources/application.yml
  # @Description:
 ###
@@ -780,67 +1232,20 @@ spring:
     active: @activated.properties@  # Maven过滤占位符
 
 abtest:
-  env: ${ABTEST_ENV:local}  # 环境标识
-  v1:
-    base-url: ${V1_BASE_URL:http://localhost:8081}
-    session-file: ${V1_SESSION_FILE:./session.txt}  # 本地开发路径
-    login-url: ${V1_LOGIN_URL:/api/login}
-  v2:
-    base-url: ${V2_BASE_URL:http://localhost:8082}
-    access-key: ${V2_ACCESS_KEY:default_key}
-    secret-key: ${V2_SECRET_KEY:default_secret}
+  api-endpoints:
+    v1:
+      create: experiment/create
+      details: experiment/detail
+      report: report/generate
+    v2:
+      create: openapi/v2/apps/{appId}/experiments
+      details: openapi/v2/apps/{appId}/experiments/{experimentId}/details
+      report: openapi/v2/apps/{appId}/experiments/{experimentId}/metrics
+
 
 management:
   endpoints:
     web:
       exposure:
         include: health,info
-###
- # @Author: ChZheng
- # @Date: 2025-04-15 15:49:27
- # @LastEditors: ChZheng
- # @LastEditTime: 2025-04-15 15:54:37
- # @FilePath: src/main/resources/application-dev.yml
- # @Description:
-###
 
-spring:
-  config:
-    activate:
-      on-profile: dev
-
-abtest:
-  v1:
-    base-url: http://dev-api.example.com
-  v2:
-    base-url: http://dev-v2-api.example.com
-
-###
- # @Author: ChZheng
- # @Date: 2025-04-15 15:49:27
- # @LastEditors: ChZheng
- # @LastEditTime: 2025-04-15 15:54:37
- # @FilePath: src/main/resources/application-prod.yml
- # @Description:
-###
-
-spring:
-  config:
-    activate:
-      on-profile: prod
-
-abtest:
-  v1:
-    session-file: /data/abtest/session.txt  # K8s持久化路径
-    base-url: http://prod-v1-api.example.com
-  v2:
-    base-url: http://prod-v2-api.example.com
-
-###
- # @Author: ChZheng
- # @Date: 2025-04-15 15:49:27
- # @LastEditors: ChZheng
- # @LastEditTime: 2025-04-15 15:49:29
- # @FilePath: src/main/resources/application-test.yml
- # @Description:
-###
